banco de dados funcionando

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -25,23 +25,32 @@ if (flutterVersionName == null) {
 
 android {
     namespace = "com.example.listafilmesapp"
-    compileSdk = flutter.compileSdkVersion
+    compileSdkVersion 34
     ndkVersion = flutter.ndkVersion
-
+    
     compileOptions {
-        sourceCompatibility = JavaVersion.VERSION_1_8
-        targetCompatibility = JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
+    }
+    kotlinOptions {
+        jvmTarget = "17"
     }
 
-    defaultConfig {
+defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
         applicationId = "com.example.listafilmesapp"
         // You can update the following values to match your application needs.
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-gradle-build-configuration.
-        minSdk = flutter.minSdkVersion
+        
+        // 1. DEFINA UMA VERSÃO MÍNIMA EXPLÍCITA
+        minSdk = 21 
+        
         targetSdk = flutter.targetSdkVersion
         versionCode = flutterVersionCode.toInteger()
         versionName = flutterVersionName
+
+        // 2. ADICIONE ESTA LINHA PARA HABILITAR O MULTIDEX
+        multiDexEnabled = true
     }
 
     buildTypes {
